updates to my python plotting; and latex, and c-mode/FILE

--- a/makefile-gmake-mode/makefile
+++ b/makefile-gmake-mode/makefile
@@ -6,7 +6,7 @@
 CC = gcc
 
 # Compiler Flags: Use $(CF) for generic/old architectures
-CF       = -g -O2
+CF       = -Wall -g -O2
 CFLAGS   = -ansi -std=gnu99
 CFLAGS_1 = -ansi -pedantic -std=gnu99 -Wall -W
 CFLAGS_2 = -Wconversion -Wshadow -Wcast-qual -Wwrite-strings -g -O2
@@ -21,13 +21,10 @@ CFILES = $2.c
 # make commands
 basic:
 	$(CC) $(CF) $(MACRO1) $(CFILES) -lm -o run_$1
-
 main: $(OBJECTS)
 	$(CC) $(CFLAGS) $(MACRO1) $(OBJECTS) -lm -o run_$1
-
 %.o : %.c
 	$(CC) $(CFLAGS) -c $<
-
 clean:
 	rm -r *.o run_$1*
 run:
